New JCFL upstream version (2.0.1). Plus fixed CMLReader test, now working. Please make sure that classes intialize fields properly! Atom.java did not do so (PointXd were not initialized when using the Atom(String) construct).
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/trunk/cdk@104 eb4e18e3-b210-0410-a6ab-dec725e4b171